# account-auth

./: Cargo.toml  README.md  docker-compose.yml
framework/: Cargo.toml
framework/src/: lib.rs
framework/src/application/: mod.rs
framework/src/application/specifications/: mod.rs
framework/src/application/traits/: mod.rs  repository.rs
framework/src/application/traits/communication/: mod.rs  topics.rs
framework/src/application/traits/data/: repository.rs  unit_of_work.rs  unit_of_work_factory.rs
framework/src/deprecated/: listener_writer_traits.rs  topic_listener.rs  topic_writer.rs
framework/src/infrastructure/: mod.rs
framework/src/infrastructure/communication/kafka/: mod.rs  topics_manager.rs
framework/src/infrastructure/data/: mod.rs
framework/src/infrastructure/data/db_context/: mod.rs
framework/src/infrastructure/data/unit_of_work/: mod.rs  traits.rs  unit_of_work.rs  unit_of_work_factory.rs
framework/src/test_utils/: mod.rs
migrations/: 20240927111648_init.up.sql
src/: config.rs  main.rs
src/application/: mod.rs
src/application/commands/: authenticate_user.rs  create_user.rs  mod.rs
src/application/dtos/user/: mod.rs
src/application/queries/: get_user.rs  mod.rs
src/application/specifications/: mod.rs
src/deprecated/: repository_trait.rs  unused_snippets.rs
src/deprecated/specifications/: mod.rs
src/domain/models/: user.rs
src/infrastructure/data/repositories/: mod.rs  users_repository.rs
src/infrastructure/data/repositories/test_fixtures/: mod.rs
src/presentation/: router.rs
src/utils/: mod.rs
