[package]
name = "framework"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["serde"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid" ] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
rstest = "0.23.0"
serial_test = "3.1.1"
dotenvy = "0.15.7"